# BlockChain-Credential

./: .gitignore  AGENTS.md  BUILD.bat  CARA_PAKAI.txt  CLAUDE.md  CLAUDE_CODE_SUMMARY.md  CMakeLists.txt  DEMO_10NODE.ps1  DEMO_3NODE.ps1  DEMO_LOCAL_UPGRADE.ps1  README.md  RUN.bat  SESSION_CONTEXT.md  START_NODES.ps1  UPLOAD_IJAZAH.ps1  build_gcc.sh  install_deps.bat  poc_exploit.py  test_hello.cpp  tugas-paper (4).odt
.keystore/: 02bb03e3e4b0e907.key  089c6ab304a720ef.key  0a68aa957d759fa6.key  0b59ae0bed15123c.key  0e1afb31e376416d.key  13072fb938dbaf2f.key  1633718f17cd0d90.key  2044dbda6750ee7c.key  24f030ad15c4b9e5.key  295a71142b6b6daa.key  2bbfed49031ec846.key  312781335511f191.key  3508dea5ee571b94.key  43800bf64231c9e0.key  4be90714236b1113.key  4fe98473c2f3ede7.key  57252bb9d2c6b523.key  5a764159dfaea976.key  67a2cbe354792592.key  68669206a151dd05.key  731cf5ed1d32529c.key  73effdad03a0adcc.key  7878b9843bf8568f.key  7deb54d777acdb36.key  81cf679f0e1d0670.key  984a9704a939e701.key  99ac0a69e2430d83.key  9ce3b292e841b950.key  a48fe4ba5e7d6c8d.key  a68a8af461ccccc1.key  b69366d2efbe00b4.key  b6d203866bf786ce.key  bfa1024bdab27980.key  ce7e9a78a8ddeaba.key  d291f2646eab94df.key  dfe941e747be6940.key  e11cbf939179e5b8.key  fcf680ea8c057950.key  itb.key  ugm.key  (+1 more)
data/: node_089c6ab304a720ef.pub  node_823e3fbe98580469.pub  node_a68a8af461ccccc1.pub  node_config.json  node_d291f2646eab94df.pub
docs/: DEMO_STEP_BY_STEP.txt  FLOWCHART_DEMO.txt  prompt-verifikasi-kode-unik.md
gui/: app.py  pdf_secure.py  scdv_core.py  test_network.py  vis_server.py
include/: blockchain.h  (+6 more)
(+44 files in other folders)
